--- a/web/style.css
+++ b/web/style.css
@@ -68,7 +68,7 @@
     max-width: 700px;
 }
 
-.text a{
+.text button{
     display: inline-block;
     font-size: 1em;
     background: #fff;
@@ -81,6 +81,6 @@
     transition: 0.2s;
 
 }
-.text a:hover {
+.text button:hover {
     letter-spacing: 6px;
 }
